telas reserva html e css prontos e pagamento usuario alterados

--- a/hotel/src/main/resources/static/rooms.html
+++ b/hotel/src/main/resources/static/rooms.html
@@ -79,9 +79,9 @@
                 <div class="col-lg-6">
                     <div class="ri-slider-item">
                         <div class="ri-sliders owl-carousel">
-                            <div class="single-img set-bg" data-setbg="img/rooms/room-1.jpg"></div>
-                            <div class="single-img set-bg" data-setbg="img/rooms/room-2.jpg"></div>
-                            <div class="single-img set-bg" data-setbg="img/rooms/room-3.jpg"></div>
+                            <div class="single-img set-bg" data-setbg="img/rooms/room-deluxe-plus-1.jpg"></div>
+                            <div class="single-img set-bg" data-setbg="img/rooms/room-deluxe-plus-2.jpg"></div>
+                            <div class="single-img set-bg" data-setbg="img/rooms/room-deluxe-plus-3.jpg"></div>
                         </div>
                     </div>
                 </div>
@@ -92,11 +92,8 @@
                                 <span>vivencie o sublime</span>
                                 <h2>Deluxe Plus</h2>
                             </div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                                viverra maecenas. Donec in sodales dui, a blandit nunc. Pellentesque id eros venenatis,
-                                sollicitudin neque sodales, vehicula nibh. Nam massa odio, porttitor vitae efficitur
-                                non, ultricies volutpat tellus.</p>
+                            <p>Desfrute de uma experiência única com uma vista espetacular! Aproveite a área privativa com mateirias aconchegantes em pedra e madeira. Aprecie o pôr do sol de floripa no mais alto nível na banheira exclusiva para duas pessoas para!!!<br/><br/>
+                            As suítes <a class="negrito" style="font-weight: 700;">Deluxe Plus</a> possuem 1 cama de casal com colchão de água e recebem até 2 pessoas!</p>
                             <div class="ri-features">
                                 <div class="ri-info">
                                     <i class="flaticon-019-television"></i>
@@ -111,12 +108,8 @@
                                     <p>AC</p>
                                 </div>
                                 <div class="ri-info">
-                                    <i class="flaticon-036-parking"></i>
-                                    <p>Estacionamento</p>
-                                </div>
-                                <div class="ri-info">
                                     <i class="flaticon-007-swimming-pool"></i>
-                                    <p>Piscina</p>
+                                    <p>Banheira p/ 2 com Vista</p>
                                 </div>
                             </div>
                             <a href="/#reserva" class="primary-btn">Faça sua Reserva</a>
@@ -128,9 +121,8 @@
                 <div class="col-lg-6 order-lg-2">
                     <div class="ri-slider-item">
                         <div class="ri-sliders owl-carousel">
-                            <div class="single-img set-bg" data-setbg="img/rooms/room-2.jpg"></div>
-                            <div class="single-img set-bg" data-setbg="img/rooms/room-3.jpg"></div>
-                            <div class="single-img set-bg" data-setbg="img/rooms/room-4.jpg"></div>
+                            <div class="single-img set-bg" data-setbg="img/rooms/room-deluxe-1.jpg"></div>
+                            <div class="single-img set-bg" data-setbg="img/rooms/room-deluxe-2.jpg"></div>
                         </div>
                     </div>
                 </div>
@@ -141,11 +133,8 @@
                                 <span>alto padrão, o melhor a sua espera</span>
                                 <h2>Deluxe</h2>
                             </div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                                viverra maecenas. Donec in sodales dui, a blandit nunc. Pellentesque id eros venenatis,
-                                sollicitudin neque sodales, vehicula nibh. Nam massa odio, porttitor vitae efficitur
-                                non, ultricies volutpat tellus.</p>
+                            <p>Suítes aconchegantes, aproveite com o seu parceiro uma estadia maravilhosa com um ambiente preparado para o seu máximo conforto! Conta com banheira aquecida para duas pessoas junto à área do banheiro.<br/><br/>
+                            As suítes <a class="negrito" style="font-weight: 700;">Deluxe</a> possuem 1 cama de casal tamanho king e recebem até 2 pessoas!</p>
                             <div class="ri-features">
                                 <div class="ri-info">
                                     <i class="flaticon-019-television"></i>
@@ -160,12 +149,8 @@
                                     <p>AC</p>
                                 </div>
                                 <div class="ri-info">
-                                    <i class="flaticon-036-parking"></i>
-                                    <p>Estacionamento</p>
-                                </div>
-                                <div class="ri-info">
                                     <i class="flaticon-007-swimming-pool"></i>
-                                    <p>Piscina</p>
+                                    <p>Banheira p/ 2 no BWC</p>
                                 </div>
                             </div>
                             <a href="/#reserva" class="primary-btn">Faça sua Reserva</a>
@@ -177,9 +162,8 @@
                 <div class="col-lg-6">
                     <div class="ri-slider-item">
                         <div class="ri-sliders owl-carousel">
-                            <div class="single-img set-bg" data-setbg="img/rooms/room-3.jpg"></div>
-                            <div class="single-img set-bg" data-setbg="img/rooms/room-4.jpg"></div>
-                            <div class="single-img set-bg" data-setbg="img/rooms/room-1.jpg"></div>
+                            <div class="single-img set-bg" data-setbg="img/rooms/room-master-1.jpg"></div>
+                            <div class="single-img set-bg" data-setbg="img/rooms/room-master-2.jpg"></div>
                         </div>
                     </div>
                 </div>
@@ -190,11 +174,8 @@
                                 <span>bem-estar em um espaço único</span>
                                 <h2>Master</h2>
                             </div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                                viverra maecenas. Donec in sodales dui, a blandit nunc. Pellentesque id eros venenatis,
-                                sollicitudin neque sodales, vehicula nibh. Nam massa odio, porttitor vitae efficitur
-                                non, ultricies volutpat tellus.</p>
+                            <p>Planejadas para você e sua família! Curta momentos incríveis com seus filhos nesse ótimo espaço. Amplo e espaçoso, com camas muito confortáveis, proporciona noites agradáveis de descanso para todos!<br/><br/>
+                            As suítes <a class="negrito" style="font-weight: 700;"> Master</a> possuem 1 cama de casal e 2 camas de solteiro e  recebem até 4 pessoas!</p>
                             <div class="ri-features">
                                 <div class="ri-info">
                                     <i class="flaticon-019-television"></i>
@@ -207,14 +188,6 @@
                                 <div class="ri-info">
                                     <i class="flaticon-003-air-conditioner"></i>
                                     <p>AC</p>
-                                </div>
-                                <div class="ri-info">
-                                    <i class="flaticon-036-parking"></i>
-                                    <p>Estacionamento</p>
-                                </div>
-                                <div class="ri-info">
-                                    <i class="flaticon-007-swimming-pool"></i>
-                                    <p>Piscina</p>
                                 </div>
                             </div>
                             <a href="/#reserva" class="primary-btn">Faça sua Reserva</a>
@@ -226,9 +199,8 @@
                 <div class="col-lg-6 order-lg-2">
                     <div class="ri-slider-item">
                         <div class="ri-sliders owl-carousel">
-                            <div class="single-img set-bg" data-setbg="img/rooms/room-4.jpg"></div>
-                            <div class="single-img set-bg" data-setbg="img/rooms/room-3.jpg"></div>
-                            <div class="single-img set-bg" data-setbg="img/rooms/room-2.jpg"></div>
+                            <div class="single-img set-bg" data-setbg="img/rooms/room-standard-1.jpg"></div>
+                            <div class="single-img set-bg" data-setbg="img/rooms/room-standard-2.jpg"></div>
                         </div>
                     </div>
                 </div>
@@ -239,11 +211,8 @@
                                 <span>acomodação confortável que cabe no seu bolso</span>
                                 <h2>Standard</h2>
                             </div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                                viverra maecenas. Donec in sodales dui, a blandit nunc. Pellentesque id eros venenatis,
-                                sollicitudin neque sodales, vehicula nibh. Nam massa odio, porttitor vitae efficitur
-                                non, ultricies volutpat tellus.</p>
+                            <p>Para você que quer economizar e desfrutar de toda a infraestrutura do hotel, essa é a escolha perfeita! Possui tudo que você precisa por um preço que cabe no seu bolso. Não deixa nada a desejar e ainda não pesa nos custos de sua viagem!!!<br/><br/>
+                            As suítes <a class="negrito" style="font-weight: 700;">Stadard</a> possuem 2 camas de solteiro e  recebem até 2 pessoas!</p>
                             <div class="ri-features">
                                 <div class="ri-info">
                                     <i class="flaticon-019-television"></i>
@@ -256,14 +225,6 @@
                                 <div class="ri-info">
                                     <i class="flaticon-003-air-conditioner"></i>
                                     <p>AC</p>
-                                </div>
-                                <div class="ri-info">
-                                    <i class="flaticon-036-parking"></i>
-                                    <p>Estacionamento</p>
-                                </div>
-                                <div class="ri-info">
-                                    <i class="flaticon-007-swimming-pool"></i>
-                                    <p>Piscina</p>
                                 </div>
                             </div>
                             <a href="/#reserva" class="primary-btn">Faça sua Reserva</a>
