--- a/hotel/src/main/resources/static/pagamentoUsuario.html
+++ b/hotel/src/main/resources/static/pagamentoUsuario.html
@@ -74,12 +74,12 @@
                             <h1 class="negrito">CPF</h1>
                             <input type="text" class="cpf" name="cpfCliente" placeholder="xxx.xxx.xxx-xx">
                         </div>
+                    </div>
+                    <div class="cadastroDireita">
                         <div class="campoCadastro">
                             <h1 class="negrito">Endereço</h1>
                             <input type="text" name="enderecoCliente" placeholder="Rua, nº, Cidade, Estado, País, CEP">
                         </div>
-                    </div>
-                    <div class="cadastroDireita">
                         <div class="campoCadastro">
                             <h1 class="negrito">Email</h1>
                             <input type="email" name="emailCliente" placeholder="exemplo@email.com"></select>
@@ -87,14 +87,6 @@
                         <div class="campoCadastro">
                             <h1 class="negrito">Nascimento</h1>
                             <input type="date" name="dataNascimentoCliente">
-                        </div>
-                        <div class="campoCadastro">
-                            <h1 class="negrito">Senha</h1>
-                            <input type="password" name="senhaCliente" placeholder="Exemplo123!">
-                        </div>
-                        <div class="campoCadastro">
-                            <h2 class="negrito">Confirmar Senha</h2>
-                            <input type="password" name="senhaCliente" placeholder="Exemplo123!">
                         </div>
                     </div>
                 </div>
@@ -138,6 +130,10 @@
                             <div class="campoCadastro">
                                 <h1 class="negrito">Vencimento</h1>
                                 <input type="month" name="vencimentoCartao">
+                            </div>
+                            <div class="campoCadastro" style="margin: 50px 0 0 0; padding: 0 180px 0 0; display: inline-block; ">
+                                <h6 class="negrito">Salvar cartão para compras futuras!</h6>
+                                <input type="checkbox"/>
                             </div>
                         </div>
                         <div class="cadastroDireita">
