login funcionando no localStorage, validacao de senha

--- a/hotel/src/main/resources/static/cadastroUsuario.html
+++ b/hotel/src/main/resources/static/cadastroUsuario.html
@@ -13,6 +13,8 @@
         <script src="js/jquey-mask.js"></script>
         <script src="js/cliente.js"></script>
         <script src="js/formulario.js"></script>
+        <script src="js/verificarUsuario.js"></script>
+
         <!-- Css Styles -->
         <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
         <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
@@ -51,7 +53,7 @@
                 </div>
             </div>
         </header>
-        <form id="cadastrarHospede" class="formularioCompra" method="POST" action="cadastrarHospede">
+        <form id="cadastrarHospede" class="formularioCompra" style="margin-bottom: 100px;" method="POST" action="cadastrarHospede">
             <h2 class="informacoes negrito" style="font-size: 1.65em;">Cadastre ou altere dados abaixo para poder realizar compras futuras de modo mais rápido!!!</h2>
             <h3 class="linhaUnica"></h3>
             <div class="formulario" action="">
@@ -96,11 +98,11 @@
                     <input onclick="return validarForm()" type="submit" value="Salvar" class="negrito botaoSalvarCadastro pointer">
                 </div>
             </div>
-            <h3 style="line-height: 50px; margin-top: 50px; font-size: 1.7em;"><span class="negrito">Cadastre</span> um <span class="negrito">Cartão de Crédito</span> ou um <span class="negrito">Cartão de Débito</span>
-                para realizar pagamento futuros!!! 
-            </h3>
         </form>
-        <form action="" style="margin-bottom: 50px;">
+            <!-- <h3 style="line-height: 50px; margin-top: 50px; font-size: 1.7em;"><span class="negrito">Cadastre</span> um <span class="negrito">Cartão de Crédito</span> ou um <span class="negrito">Cartão de Débito</span>
+                para realizar pagamentos futuros!!! 
+            </h3> -->
+        <!-- <form action="" style="margin-bottom: 50px;">
             <div class="formulario" action="">
                 <div class="cadastro">
                     <h1 class="negrito tituloCadastro">Cadastro Cartão</h1>
@@ -147,7 +149,7 @@
                     <input type="submit" value="Salvar" class="negrito botaoSalvarCadastro pointer">
                 </div>
             </div>
-        </form>
+        </form> -->
         <footer class="footer-section">
             <div class="container">
                 <div class="row">
