--- a/hotel/src/main/resources/static/contact.html
+++ b/hotel/src/main/resources/static/contact.html
@@ -14,6 +14,9 @@
         href="https://fonts.googleapis.com/css?family=Montserrat+Alternates:100,200,300,400,500,600,700,800,900&display=swap"
         rel="stylesheet">
 
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/verificarUsuario.js"></script>
+
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
@@ -40,7 +43,7 @@
                     <a href="./"><img src="img/logo.svg" alt=""></a>
                 </div>
                 <div class="nav-right">
-                    <a href="./#reserva" class="primary-btn">Faça sua Reserva</a>
+                    <a href="/#reserva" class="primary-btn">Faça sua Reserva</a>
                     <a href="./loginUsuario" id="button-login">Login</a>
                     <h6 class="text-white">Ainda não tem conta?<a href="./cadastroUsuario" id="button-cadastro">Cadastre-se</a></h6>
                 </div>
