--- a/hotel/src/main/resources/static/pagamentoUsuario.html
+++ b/hotel/src/main/resources/static/pagamentoUsuario.html
@@ -13,6 +13,8 @@
         <script src="js/jquey-mask.js"></script>
         <script src="js/cliente.js"></script>
 
+        <script src="js/verificarUsuario.js"></script>
+
         <!-- Css Styles -->
         <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
         <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
