--- a/hotel/src/main/resources/static/index.html
+++ b/hotel/src/main/resources/static/index.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Floripa Hotel</title>
-
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/verificarUsuario.js"></script>
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
@@ -35,7 +36,7 @@
         <div class="container-fluid">
             <div class="inner-header">
                 <div class="logo">
-                    <a href="./"><img src="img/logo.svg" alt=""></a>
+                    <a href="/"><img src="img/logo.svg" alt=""></a>
                 </div>
                 <div class="nav-right">
                     <a href="#reserva" class="primary-btn">Faça sua Reserva</a>
