--- a/hotel/src/main/resources/static/loginUsuario.html
+++ b/hotel/src/main/resources/static/loginUsuario.html
@@ -13,6 +13,8 @@
         <script src="js/jquery-3.3.1.min.js"></script>
         <script src="js/formulario.js"></script>
 
+        <script src="js/verificarUsuario.js"></script>
+
         <!-- Css Styles -->
         <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
         <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
