--- a/hotel/src/main/resources/static/services.html
+++ b/hotel/src/main/resources/static/services.html
@@ -14,6 +14,9 @@
         href="https://fonts.googleapis.com/css?family=Montserrat+Alternates:100,200,300,400,500,600,700,800,900&display=swap"
         rel="stylesheet">
 
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/verificarUsuario.js"></script>
+
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
