name checkbox salvarCartao

--- a/hotel/src/main/resources/static/pagamentoUsuario.html
+++ b/hotel/src/main/resources/static/pagamentoUsuario.html
@@ -135,7 +135,7 @@
                             </div>
                             <div class="campoCadastro" style="margin: 50px 0 0 0; padding: 0 180px 0 0; display: inline-block; ">
                                 <h6 class="negrito">Salvar cartão para compras futuras!</h6>
-                                <input type="checkbox"/>
+                                <input type="checkbox" name="salvarCartao"/>
                             </div>
                         </div>
                         <div class="cadastroDireita">
