--- a/hotel/src/main/resources/static/cadastroFuncionario.html
+++ b/hotel/src/main/resources/static/cadastroFuncionario.html
@@ -31,9 +31,7 @@
         </div>
         <div class="navegacao">
             <h2 id="titulo" class="negrito">Funcionário</h2>
-            <hr/>
-            <hr/>
-            <hr/>
+            <hr class="hrLaranja"/>
             <div class="inputs">
                 <input class="barra-pesquisa" type="text" placeholder="Pesquisar Funcionário por CPF">
                 <input class="btnPesquisar negrito branco pointer" type="submit" value="Pesquisar">
@@ -45,37 +43,39 @@
                 <div class="cadastroEsquerda">
                     <div class="campoCadastro">
                         <h1 class="negrito">Nome</h1>
-                        <input type="text" name="nomeFuncionario" placeholder="Nome Completo">
+                        <input type="text" name="nome" placeholder="Nome Completo">
                     </div>
                     <div class="campoCadastro">
                         <h1 class="negrito">Telefone</h1>
-                        <input type="text" class="telefone" name="nomeFuncionario" placeholder="xx xxxxx-xxxx">
+                        <input type="text" class="telefone" name="telefone" placeholder="xx xxxxx-xxxx">
                     </div>
                     <div class="campoCadastro">
                         <h1 class="negrito">CPF</h1>
-                        <input type="text" class="cpf" name="nomeFuncionario" placeholder="xxx.xxx.xxx-xx">
+                        <input type="text" class="cpf" name="cpf" placeholder="xxx.xxx.xxx-xx">
                     </div>
                     <div class="campoCadastro">
                         <h1 class="negrito">Endereço</h1>
-                        <input type="text" name="nomeFuncionario" placeholder="Rua, nº, Cidade, Estado, País, CEP">
+                        <input type="text" name="endereco" placeholder="Rua, nº, Cidade, Estado, País, CEP">
                     </div>
                 </div>
                 <div class="cadastroDireita">
                     <div class="campoCadastro">
                         <h1 class="negrito">Cargo</h1>
-                        <select name="selectCargo" class="pointer"></select>
+                        <select name="selectCargo" class="pointer">
+                            <option value="" selected disabled>Selecione o Tipo de Cargo</option>
+                        </select>
                     </div>
                     <div class="campoCadastro">
                         <h1 class="negrito">Email</h1>
-                        <input type="email" name="nomeFuncionario" placeholder="Exemplo@email.com">
+                        <input type="email" name="email" placeholder="Exemplo@email.com">
                     </div>
                     <div class="campoCadastro">
                         <h1 class="negrito">Senha</h1>
-                        <input type="password" name="nomeFuncionario">
+                        <input type="password" name="senha" placeholder="Exemplo123!">
                     </div>
                     <div class="campoCadastro">
                         <h2 class="negrito">Confirmar Senha</h2>
-                        <input type="password" name="nomeFuncionario">
+                        <input type="password" name="senha" placeholder="Exemplo123!">
                     </div>
                 </div>
                 <div class="botoesCadastro">
