--- a/hotel/src/main/resources/static/index.html
+++ b/hotel/src/main/resources/static/index.html
@@ -113,7 +113,7 @@
                                 <option value="deluxe-plus">Deluxe Plus</option>
                             </select>
                         </div> -->
-                        <button type="submit">Pesquisar</button>
+                        <button style="font-weight: 500;" type="submit">Pesquisar</button>
                     </form>
                 </div>
             </div>
