--- a/hotel/src/main/resources/static/cadastroTipoQuarto.html
+++ b/hotel/src/main/resources/static/cadastroTipoQuarto.html
@@ -65,7 +65,8 @@
                                 <td><input type="text" class="centralText" name="tipoQuarto" required></td>
                                 <td>
                                     <select class="selectPopupForm" aria-label=".form-select-lg example" id="quantidadeCamaSolteiro" name="quantidadeCamaSolteiro" onchange="gerarQNTpessoas('#listerUser')" required>
-                                    <option value="1" selected id="1">1</option>
+                                    <option value="0" selected>0</option>
+                                    <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="3">3</option>
                                     <option value="4">4</option>
@@ -74,7 +75,8 @@
                                 </td>
                                 <td>
                                     <select class="selectPopupForm" aria-label=".form-select-lg example" id="quantidadeCamaCasal" name="quantidadeCamaCasal" onchange="gerarQNTpessoas('#listerUser')" required>
-                                    <option value="1" selected id="1">1</option>
+                                    <option value="0" selected>0</option>
+                                    <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="3">3</option>
                                     <option value="4">4</option>
