--- a/hotel/src/main/resources/static/cadastroUsuario.html
+++ b/hotel/src/main/resources/static/cadastroUsuario.html
@@ -95,7 +95,7 @@
                             <input type="password" name="confirmarSenha" placeholder="Exemplo123!">
                         </div>
                     </div>
-                    <input onclick="return validarForm()" type="submit" value="Salvar" class="negrito botaoSalvarCadastro pointer">
+                    <input id="inputTeste" type="submit" value="Salvar" class="negrito botaoSalvarCadastro pointer">
                 </div>
             </div>
         </form>
