--- a/hotel/src/main/resources/static/loginUsuario.html
+++ b/hotel/src/main/resources/static/loginUsuario.html
@@ -61,7 +61,7 @@
             <input type="email" name="login" id="email" placeholder="exemplo@email.com">
             <h2>Sua Senha</h2>
             <input type="password" name="senha" placeholder="1º acesso =  preencha com a senha recebida em seu email">
-            <a onclick="this.href='recuperar?emailCliente='+document.getElementById('email').value" href="#">Esqueceu sua senha?</a>
+            <a onclick="this.href='recuperarSenha?email='+document.getElementById('email').value" href="#">Esqueceu sua senha?</a>
             <input type="submit" value="Entrar" class="negrito botaoFinalizarCadastro">
         </form>
         <footer class="footer-section">
