--- a/hotel/src/main/resources/static/checkinQuartoDisponivel.html
+++ b/hotel/src/main/resources/static/checkinQuartoDisponivel.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Cadastro de Quarto</title>
+        <title>Checkin - Quartos Disponíveis</title>
         <link href='https://fonts.googleapis.com/css?family=Montserrat Alternates' rel='stylesheet'>
         <script src="js/jquery-3.3.1.min.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -41,10 +41,10 @@
             </div>
         </div>
         <div class="navegacao">
-            <h2 id="titulo" class="negrito">Tipo Quarto</h2>
+            <h2 id="titulo" class="negrito">Checkin - Quartos Disponíveis</h2>
             <hr class="hrLaranja"/>
             <div class="inputs" style="margin-top: 60px;">
-                <input class="barra-pesquisa" type="text" placeholder="Pesquisar por Tipo de Quarto">
+                <input class="barra-pesquisa" type="text" placeholder="Inserir o Código da Reserva">
                 <input class="btnPesquisar negrito branco pointer" type="submit" value="Pesquisar">
             </div>
         </div>
@@ -53,9 +53,6 @@
                 <thead>
                     <tr>
                         <th>Tipo de Quarto</th>
-                        <th>Cama Solteiro</th>
-                        <th>Cama Casal</th>
-                        <th>N° Pessoas</th>
                         <th></th>
                     </tr>
                 </thead>    
@@ -63,29 +60,9 @@
                         <tr>
                             <form action="/tipoQuarto/save" method="post">
                                 <td><input type="text" class="centralText" name="tipoQuarto" required></td>
+                                
                                 <td>
-                                    <select class="selectPopupForm" id="quantidadeCamaSolteiro" name="quantidadeCamaSolteiro" onchange="gerarQNTpessoas('#listerUser')" required>
-                                    <option value="0" selected>0</option>
-                                    <option value="1">1</option>
-                                    <option value="2">2</option>
-                                    <option value="3">3</option>
-                                    <option value="4">4</option>
-                                    <option value="5">5</option>
-                                    </select>
-                                </td>
-                                <td>
-                                    <select class="selectPopupForm" id="quantidadeCamaCasal" name="quantidadeCamaCasal" onchange="gerarQNTpessoas('#listerUser')" required>
-                                    <option value="0" selected>0</option>
-                                    <option value="1">1</option>
-                                    <option value="2">2</option>
-                                    <option value="3">3</option>
-                                    <option value="4">4</option>
-                                    <option value="5">5</option>
-                                    </select>
-                                </td>
-                                <td><input type="number" class="centralText" name="numeroPessoas" id="numeroPessoas" required disabled ></td>
-                                <td>
-                                    <button type="submit" class="confirmar negrito ">Cadastrar</button>
+                                    <img src="img/buscar_lupa_30_30px.svg" class="botaoPopup pointer" onclick=" OpenDeletePopup(${value.idTipoQuarto})">
                                 </td>
                             </form>
                         </tr>
